Fixed a gap padding bug

--- a/src/styles/molecules/_molecules.card.scss
+++ b/src/styles/molecules/_molecules.card.scss
@@ -99,6 +99,7 @@
     grid-template-columns: 1fr 1fr;
 
     .m-card__body {
+      padding: var(--card-gap);
       padding-left: 0;
     }
   }
@@ -108,6 +109,7 @@
     grid-template-columns: 1fr 1fr;
 
     .m-card__body {
+      padding: var(--card-gap);
       padding-right: 0;
     }
   }
